# Rust_Presentation

./: README.md  rust_intro.md
assets/: theme.css
example_project/: Cargo.toml  README.md  rust-toolchain.toml
example_project/01-baremetal/: README.md
example_project/01-baremetal/src/: main.rs
example_project/02-pac/: README.md
example_project/02-pac/src/: main.rs
example_project/03-hal/: README.md
example_project/03-hal/src/: main.rs
example_project/04-bsp/: Cargo.toml  README.md
example_project/04-bsp/.cargo/: config.toml
example_project/04-bsp/src/: bsp.rs  main.rs
example_project/05-interrupt/: Cargo.toml  README.md
example_project/05-interrupt/src/: main.rs
example_project/06-defmt-example/: Cargo.toml  README.md
example_project/06-defmt-example/tests/: integration.rs
example_project/06-rtt-logging/: Cargo.toml  README.md
example_project/06-rtt-logging/.cargo/: config.toml
example_project/06-rtt-logging/src/: main.rs
example_project/07-defmt-example/: Cargo.toml  README.md
example_project/07-defmt-example/.cargo/: config.toml
example_project/07-defmt-example/src/: lib.rs
example_project/07-defmt-example/tests/: integration.rs
example_project/baremetal/: Cargo.toml  README.md
example_project/baremetal/.cargo/: config.toml
example_project/baremetal/src/: main.rs
example_project/bsp/src/: bsp.rs
example_project/defmt-example/.cargo/: config.toml
example_project/hal/: Cargo.toml  README.md
example_project/hal/src/: main.rs
example_project/interrupt/: Cargo.toml  README.md
example_project/interrupt/src/: main.rs
example_project/pac/: Cargo.toml
example_project/pac/src/: main.rs
slides/: async_rust.md  embeded_rust_intro.md  rust_intro.md
slides/assets/: theme.css
tmp/: Blinking an LED_ Embedded Rust.txt
