[package]
name = "interrupt"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
stm32f7xx-hal = {version = "0.8.0", features = ["stm32f767", "rt"]}
panic-halt = "0.2.0"  # Or choose any panic handler you like
embedded-hal = "0.2.7"
