[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Eicke Hecht <eicke_hecht@baxter.com>"]
name = "defmt-example"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
stm32f7xx-hal = {version = "0.8.0", features = ["stm32f767"]}
embedded-hal = "1.0.0"

[dev-dependencies]
defmt-test = "0.3"
